* Fixed performance issues * Added better inspection of time plugins take: ![](http://content.screencast.com/users/RubenJav/folders/Jing/media/fecae72a-dbac-465b-ae1d-048e5cda2925/00000557.png)

--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -70,8 +70,9 @@
                         require(plugins, function(){
                             ide.dispatchEvent("extload", {modules: plugins});
 
+                            cloud9config.totalTime = new Date() - cloud9config.startdate;
                             console.log("Total Load Time " 
-                                + (new Date() - window.cloud9config.startdate) + "ms");
+                                + (cloud9config.totalTime) + "ms");
 
                             ide.addEventListener("$event.extload", function(cb){
                                 cb();
