--- a/plugins-server/cloud9.core/view/ide.tmpl.packed.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.packed.html
@@ -57,8 +57,9 @@
                         // Load extensions
                         ide.dispatchEvent("extload", {modules: list});
                         
+                        cloud9config.totalTime = new Date() - cloud9config.startdate;
                         console.log("Total Load Time " 
-                            + (new Date() - window.cloud9config.startdate) + "ms");
+                            + (cloud9config.totalTime) + "ms");
                             
                         ide.addEventListener("$event.extload", function(cb){
                             cb();
