--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -30,6 +30,7 @@
                 version: <%version%>,
                 staticUrl: "[%staticUrl%]",
                 socketIoUrl: <%socketIoUrl%>,
+                socketIoTransports: <%socketIoTransports%>,
                 hosted: [%hosted%],
                 settings: <%settingsXml%>
             };
