--- a/plugins-server/cloud9.core/view/ide.tmpl.packed.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.packed.html
@@ -30,6 +30,7 @@
                 staticUrl: <%staticUrl%>,
                 settings: <%settingsXml%>,
                 socketIoUrl: <%socketIoUrl%>,
+                socketIoTransports: <%socketIoTransports%>,
                 settings: <%settingsXml%>
             };
             
