--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -71,9 +71,8 @@
                         require(plugins, function(){
                             ide.dispatchEvent("extload", {modules: plugins});
 
-                            cloud9config.totalTime = new Date() - cloud9config.startdate;
                             console.log("Total Load Time " 
-                                + (cloud9config.totalTime) + "ms");
+                                + (new Date() - window.cloud9config.startdate) + "ms");
 
                             ide.addEventListener("$event.extload", function(cb){
                                 cb();
