--- a/plugins-client/ext.searchreplace/searchreplace.css
+++ b/plugins-client/ext.searchreplace/searchreplace.css
@@ -1,13 +1,14 @@
-#divSearchReplaceCount {
+#divSearchCount {
     position: absolute;
     width: auto;
     height: 19px;
-    right: 12px;
-    top: 18px;
+    right: 73px;
+    top: 2px;
+    z-index : 100;
 }
 
-#divSearchReplaceCount .searchIter,
-#divSearchReplaceCount .searchTotal {
+#divSearchCount .searchIter,
+#divSearchCount .searchTotal {
     color: #aaa;
     font-size: 11px;
     height: 19px;
@@ -18,12 +19,12 @@
     float: left;
 }
 
-#divSearchReplaceCount .searchIter {
+#divSearchCount .searchIter {
     margin: 0 1px 0 0;
     padding: 0 0 0 7px;
 }
 
-#divSearchReplaceCount .searchTotal {
+#divSearchCount .searchTotal {
     margin: 0;
     padding: 0 5px 0 2px;
 }
