Update packaging, move files around

--- a/plugins-server/cloud9.core/view/ide.tmpl.packed.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.packed.html
@@ -52,9 +52,9 @@
                         var aceConfig = require("ace/config");
 
                         aceConfig.set("packaged", true);
-                        aceConfig.set("workerPath", "/static/js/worker");
-                        aceConfig.set("modePath", "/static/js/mode");
-                        aceConfig.set("themePath", "/static/js/theme");
+                        aceConfig.set("workerPath", "/static/ace/worker");
+                        aceConfig.set("modePath", "[%staticUrl%]/ace/mode");
+                        aceConfig.set("themePath", "[%staticUrl%]/ace/theme");
 
                         // Load extensions
                         //ide.dispatchEvent("extload", {modules: list});
