--- a/plugins-server/cloud9.core/view/ide.tmpl.packed.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.packed.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html [%offlineManifest%] xmlns="http://www.w3.org/1999/xhtml" xmlns:a="http://ajax.org/2005/aml" skipParse="true">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:a="http://ajax.org/2005/aml" skipParse="true">
     <head profile="http://www.w3.org/2005/10/profile">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <title>[%projectName%] - Cloud9</title>
@@ -28,7 +28,7 @@
                 readonly: <%readonly%>,
                 projectName: <%projectName%>,
                 version: <%version%>,
-                staticUrl: "[%staticUrl%]",
+                staticUrl: <%staticUrl%>,
                 socketIoUrl: <%socketIoUrl%>,
                 socketIoTransports: <%socketIoTransports%>,
                 hosted: [%hosted%],
@@ -42,22 +42,24 @@
             }
 
        
-            //var config = <%requirejsConfig%>;
+            var config = <%requirejsConfig%>;
 
-            //require(config, function() {
+            require(config, function() {
 
-                    require(["[%staticUrl%]/packed.js"], function(ide, ext, util) {
+                    var list = ["[%staticUrl%]/packed.js"];
+                    
+                    require(list, function(ide, ext, util) {
                         var ide = require("core/ide"), ext = require("core/ext"), util = require("core/util");
              
                         var aceConfig = require("ace/config");
 
                         aceConfig.set("packaged", true);
-                        aceConfig.set("workerPath", "/static/ace/worker");
+                        aceConfig.set("workerPath", "[%staticUrl%]/ace/worker");
                         aceConfig.set("modePath", "[%staticUrl%]/ace/mode");
                         aceConfig.set("themePath", "[%staticUrl%]/ace/theme");
 
                         // Load extensions
-                        //ide.dispatchEvent("extload", {modules: list});
+                        ide.dispatchEvent("extload", {modules: list});
                         
                         cloud9config.totalTime = new Date() - cloud9config.startdate;
                         console.log("Total Load Time " 
@@ -69,7 +71,7 @@
                     });
 
                     preloaderImgs();
-           // });
+            });
 
             function preloaderImgs() {
                 var preloadImgs = [
