Keeps cursor at default on collapsed hover state

--- a/plugins-client/ext.console/console.css
+++ b/plugins-client/ext.console/console.css
@@ -76,6 +76,7 @@
 .console_text.feedback .output_section.collapsed:hover,
 .console_text.feedback .output_section.collapsed.quit_proc:hover {
     background: #38393a;
+    cursor: default;
 }
 
 /** Deprecated **/
