--- a/plugins-client/ext.uploadfiles/uploadfiles.css
+++ b/plugins-client/ext.uploadfiles/uploadfiles.css
@@ -8,7 +8,7 @@
     height: 30px;
     font-family: Arial;
     font-size: 11px;
-    color: #606060;
+    color: #a3a3a3;
     text-shadow: #ffffff 0 1px 0;
     line-height: 37px;
     font-weight: bold;
