Fixed individual module running, added newtab feature

--- a/plugins-client/ext.console/console.css
+++ b/plugins-client/ext.console/console.css
@@ -56,10 +56,10 @@
 .console_text div {
     padding: 2px 10px;
 }
-.console_text.feedback div {
+.console_text div {
     padding-left: 31px;
 }
-.console_text.feedback .output_section {
+.console_text .output_section {
     padding: 10px 0 10px 2px;
     border-bottom: 1px solid #444;
     overflow: hidden;
@@ -73,9 +73,13 @@
     -moz-transition-timing-function: ease;
 }
 
-.console_text.feedback .output_section.collapsed:hover,
-.console_text.feedback .output_section.collapsed.quit_proc:hover {
+.console_text .output_section.collapsed:hover,
+.console_text .output_section.collapsed.quit_proc:hover {
     background: #38393a;
+    cursor: default;
+}
+
+.console_text .output_section.collapsed span:hover {
     cursor: default;
 }
 
@@ -85,7 +89,7 @@
     border-top: 1px solid #444;
     margin: 6px 5px 6px 30px;
 }
-.console_text.feedback div.prompt_spacer {
+.console_text div.prompt_spacer {
     padding-top: 5px;
 }
 .console_text a:link, .console_text a:hover, .console_text a:active {
@@ -94,7 +98,7 @@
 .console_text a:visited {
     color: #909090;
 }
-.console_text.feedback .prompt_spinner {
+.console_text .prompt_spinner {
     background: url(/static/ext/main/style/images/console_spinner_proc.gif) no-repeat 0 0;
     display: inline;
     width: 21px;
@@ -110,29 +114,29 @@
     -moz-transition-delay: 0ms;
     -moz-transition-timing-function: ease;
 }
-.console_text.feedback .output_section.quit_proc {
+.console_text .output_section.quit_proc {
     background-color: #372a2a;
     box-shadow: inset 0px 0px 0px 1px #372a2a, inset 6px 0px 0px 0px #b0423f;
 }
-.console_text.feedback .output_section.loading.has_pid:hover .prompt_spinner {
+.console_text .output_section.loading.has_pid:hover .prompt_spinner {
     background: url(/static/ext/main/style/images/console-action-cancel.png) no-repeat 0 0;
 }
-.console_text.feedback .output_section.loading.has_pid:hover .prompt_spinner:active {
+.console_text .output_section.loading.has_pid:hover .prompt_spinner:active {
     background: url(/static/ext/main/style/images/console-action-cancel.png) no-repeat 0 -22px;
 }
-.console_text.feedback div.loaded .prompt_spinner {
+.console_text div.loaded .prompt_spinner {
     background: url(/static/ext/main/style/images/cli-block-expand.png) no-repeat 1px 1px;
 }
 
-.console_text.feedback div.loaded .prompt_spinner:hover {
+.console_text div.loaded .prompt_spinner:hover {
     background: url(/static/ext/main/style/images/cli-block-expand.png) no-repeat -23px 1px;
 }
 
-.console_text.feedback div.loaded.collapsed .prompt_spinner {
+.console_text div.loaded.collapsed .prompt_spinner {
     background: url(/static/ext/main/style/images/cli-block-expand.png) no-repeat -48px 1px
 }
 
-.console_text.feedback div.loaded.collapsed .prompt_spinner:hover {
+.console_text div.loaded.collapsed .prompt_spinner:hover {
     background: url(/static/ext/main/style/images/cli-block-expand.png) no-repeat -73px 1px
 }
 
