--- a/plugins-client/ext.main/style/style.css
+++ b/plugins-client/ext.main/style/style.css
@@ -189,6 +189,33 @@ BODY {
     
 }
 
+.text.interactive_output {
+    border-top: 1px solid #999;
+    padding: 5px 10px;
+    font-family: menlo,courier new,fixed,swiss,sans-serif;
+    font-size: 12px;
+    color: #000;
+    line-height: 18px;
+    overflow: hidden;
+}
+.text.interactive_output .output_section {
+    padding: 5px 0;
+    border-bottom: 1px solid #f0f0f0;
+}
+.text.interactive_output .prompt {
+    color: #0080ff;
+}
+
+.text.interactive_output .xmlhl {
+    color: green;
+    font-weight: bold;
+}
+
+.interactive_output .error {
+    color: red;
+    font-weight: bold;
+}
+
 .unselectable {
     -moz-user-select: -moz-none;
     -khtml-user-select: none;
