--- a/plugins-client/ext.uploadfiles/uploadfiles.css
+++ b/plugins-client/ext.uploadfiles/uploadfiles.css
@@ -12,6 +12,7 @@
     text-shadow: #ffffff 0 1px 0;
     line-height: 37px;
     font-weight: bold;
+    overflow: hidden;
 }
 
 .uploadactivity-header .header {
