Stop making everything into a 500 error

--- a/plugins-server/cloud9.core/view/error.tmpl.html
+++ b/plugins-server/cloud9.core/view/error.tmpl.html
@@ -6,9 +6,9 @@
         <meta name="description" content=""/>
         <meta name="keywords" content=""/>
 
-        <link rel="icon" type="image/gif" href="/static/favicon.ico" />
+        <link rel="icon" type="image/gif" href="/static/homepage/favicon.ico" />
 
-        <link rel="stylesheet" type="text/css" href="/static/style/error.css" />
+        <link rel="stylesheet" type="text/css" href="/static/homepage/style/error.css" />
     </head>
     <body>
         <div class="mainwarper">
