Implement different offline states

--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -33,7 +33,8 @@
                 hosted: [%hosted%],
                 settings: <%settingsXml%>,
                 packed: <%packed%> ? true : false,
-                packedName: <%packedName%>
+                packedName: <%packedName%>,
+                local: <%local%>
             };
 
             // prevent console messages from crashing our app!
