added env variable to IDE template

--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -34,7 +34,8 @@
                 socketIoTransports: <%socketIoTransports%>,
                 hosted: [%hosted%],
                 settings: <%settingsXml%>,
-                real: <%real%> ? true : false
+                real: [%real%],
+                env: <%env%>
             };
 
             // prevent console messages from crashing our app!
