--- a/plugins-client/ext.searchreplace/searchreplace.css
+++ b/plugins-client/ext.searchreplace/searchreplace.css
@@ -34,8 +34,8 @@
 }
 
 .btnquicksearchnav.btnquicksearchnavLeft .lbl span {
-    background-image: url("/static/ext/main/style/icons/arrow_left_search.png");
+    background-image: url("{ide.staticPrefix}/ext/main/style/icons/arrow_left_search.png");
 }
 .btnquicksearchnav.btnquicksearchnavRight .lbl span {
-    background-image: url("/static/ext/main/style/icons/arrow_right_search.png");
+    background-image: url("{ide.staticPrefix}/ext/main/style/icons/arrow_right_search.png");
 }
