--- a/plugins-client/ext.dashboard/dashboard.css
+++ b/plugins-client/ext.dashboard/dashboard.css
@@ -205,9 +205,7 @@ div.loading {
 }
 .profile .account .header {
     background-color: #d2654c;
-    background-image: -webkit-linear-gradient(90deg, rgba(0,0,0,.15) 0%, rgba(0,0,0,0) 100%);
-    background-image:    -moz-linear-gradient(90deg, rgba(0,0,0,.15) 0%, rgba(0,0,0,0) 100%);
-    background-image:         linear-gradient(90deg, rgba(0,0,0,.15) 0%, rgba(0,0,0,0) 100%);
+    background-image: url(/static/ext/dashboard/images/header.png);
     border-bottom: 1px solid rgba(0,0,0,.6);
     border-radius: 5px 5px 0 0;
     box-shadow: inset 0 1px 0 rgba(255,255,255,.18),
@@ -239,7 +237,7 @@ div.loading {
     background-image: -webkit-linear-gradient(90deg, rgba(0,0,0,.05) 0%, rgba(0,0,0,0) 100%);
     background-image:    -moz-linear-gradient(90deg, rgba(0,0,0,.05) 0%, rgba(0,0,0,0) 100%);
     background-image:         linear-gradient(90deg, rgba(0,0,0,.05) 0%, rgba(0,0,0,0) 100%);
-    border: 2px solid rgba(42,42,42,.7);
+    border: 2px solid #313232;
     box-shadow: inset 0 1px 0 rgba(255,255,255,.81);
 }
 .profile .content .avatar-holder {
@@ -284,6 +282,6 @@ div.loading {
     background: url(/static/ext/dashboard/images/heart.png) no-repeat 0 50%;
     color: #865032;
     font-size: 12px;
-    padding-left: 15px;
+    line-height: 19px;
     text-shadow: 0 1px 0 #efebe8;
 }
