--- a/plugins-client/ext.dashboard/dashboard.css
+++ b/plugins-client/ext.dashboard/dashboard.css
@@ -64,6 +64,7 @@ div.loading {
     padding-right: 0;
 }
 
+.profile .button-close,
 .dashboard .button-close {
     right: 8px;
     position: absolute;
@@ -201,7 +202,7 @@ div.loading {
     border-radius: 5px;
     border: 1px solid rgba(0,4,10,.45);
     box-shadow: 0 1px 5px rgba(0,0,0,.31), inset 0 0 0 1px #5e5e5e;
-
+    position: relative;
 }
 .profile .account .header {
     background-color: #d2654c;
@@ -233,10 +234,7 @@ div.loading {
     padding-right: 0;
 }
 .profile .account .content {
-    background-color: #e5e3e1;
-    background-image: -webkit-linear-gradient(90deg, rgba(0,0,0,.05) 0%, rgba(0,0,0,0) 100%);
-    background-image:    -moz-linear-gradient(90deg, rgba(0,0,0,.05) 0%, rgba(0,0,0,0) 100%);
-    background-image:         linear-gradient(90deg, rgba(0,0,0,.05) 0%, rgba(0,0,0,0) 100%);
+    background: #e5e3e1 url({ide.staticPrefix}/ext/dashboard/images/content.png);
     border: 2px solid #313232;
     box-shadow: inset 0 1px 0 rgba(255,255,255,.81);
 }
@@ -268,7 +266,7 @@ div.loading {
     border-style: solid !important;
 }
 .profile .content .public-url {
-    color: #575654;
+    color: #979890;
     font-family: Georgia, serif;
     font-size: 13px;
     font-style: italic;
@@ -284,4 +282,87 @@ div.loading {
     font-size: 12px;
     line-height: 19px;
     text-shadow: 0 1px 0 #efebe8;
+}
+
+.emboss-pattern {
+    background: url({ide.staticPrefix}/ext/dashboard/images/emboss-pattern.png) 0 50% repeat-x;
+    bottom: 3px;
+    left: 5px;
+    position: absolute;
+}
+
+.linked-services > .title {
+    color: #dbdbdb;
+    font-size: 11px;
+    font-weight: bold;
+    text-shadow: 0 1px 0 #141414;
+}
+.linked-services .cbcontainer .label {
+    color: #81AFCD;
+    font-size: 12px;
+    position: relative;
+    top: -1px;
+}
+.linked-services .cbcontainerDisabled .label {
+    color: #8A8A8A;
+}
+.linked-services .email {
+    color: #8A8A8A;
+    font-size: 11px;
+    left: -5px;
+    line-height: 37px;
+    position: relative;
+}
+.linked-services .cbcontainer .fake-button {
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    height: 27px;
+    margin: 0 1px;
+    overflow: hidden;
+    padding: 0;
+    position: relative;
+    text-indent: 100%;
+    top: -8px;
+    width: 36px;
+}
+.linked-services .cbcontainerOver .fake-button {
+    background-position: -40px 0;
+}
+.linked-services .cbcontainerDown .fake-button {
+    background-position: -80px 0;
+    
+}
+.linked-services .cbcontainerDisabled .fake-button {
+    background-position: -120px 0;
+}
+
+.linked-services .cbcontainer .fake-button.github {
+    background-image: url({ide.staticPrefix}/ext/dashboard/images/checkbox-buttons/github.png);
+}
+.linked-services .cbcontainer .fake-button.bitbucket {
+    background-image: url({ide.staticPrefix}/ext/dashboard/images/checkbox-buttons/bitbucket.png);
+}
+.linked-services .button-link-dark {
+    color: #C8FAC7;
+}
+.linked-services .info {
+    color: #849ea0;
+    font-family: Georgia, serif;
+    font-size: 11px;
+    font-style: italic;
+    left: 4px;
+    line-height: 14px;
+    position: relative;
+    text-shadow: 0 1px 0 #141414;
+    top: -2px;
+}
+.settings h3 {
+    color: #dbdbdb;
+    font-size: 11px;
+    padding-bottom: 2px;
+    text-indent: 4px;
+    text-shadow: 0 1px 0 #141414;
+}
+.settings .button-colorless {
+    line-height: 21px;
 }
